# FallingGame

./: .gitignore  CNAME  FallingGame.sln  FallingGameCmake.js  FallingGameCmake.wasm  index.html
FallingGame/: Bouncer.cpp  Bouncer.h  Bouncer.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Cloud.cpp  Cloud.h  Cloud.hpp  Coin.cpp  Coin.h  Coin.hpp  CoinParticle.cpp  CoinParticle.h  CoinParticle.hpp  Drawer.cpp  Drawer.h  Drawer.hpp  FallingGame.vcxproj  FallingGame.vcxproj.filters  Game.cpp  Game.h  Game.hpp  GameState.cpp  GameState.h  GameState.hpp  Layer.cpp  Layer.h  Layer.hpp  Player.cpp  Player.h  Player.hpp  Todo.txt  freetype.lib  glad.c  gladES.c  main.cpp  misc.cpp  misc.h  (+4 more)
FallingGame/f/shaders/: bird.frag  bird.vert  cloud.frag  cloud.vert  coin_particle.frag  coin_particle.vert  firebar.frag  firebar.vert  image.frag  image.vert  rectangle.frag  rectangle.vert  sides.frag  sides.vert  sky.frag  sky.vert  star.frag  star.vert  text.frag  text.vert
FallingGame/libs/include/SDL/: SDL_messagebox.h  SDL_pixels.h  SDL_rect.h  SDL_render.h  SDL_surface.h
FallingGame/libs/include/glad/: glad.h
FallingGame/libs/include/gladES/: glad.h
FallingGame/libs/include/nlohmann/: json.hpp
